--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
  <!--  DESTACADOS -->
  <section id="outstanding" class="container text-center text-white py-5">
     <div class="mb-5">
-      <h5 class="text-uppercase">DESTACAD</h5>
+      <h5 class="text-uppercase">DESTACADOS</h5>
       <hr class="bg-info opacity-75" />
     </div>
     <div class="container">
