--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 
                 <div class="card-body">
                   <h5 class="card-title">consectetur adipiscing elit</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eveniet sed expedita hic in eum dolorem sunt, est quod maiores vero doloremque, nihil aliquam molestias provident, deserunt quas minima facere?</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eveniet sed expedita hic in eum dolorem sunt, est quod maiores vero doloremque, nihil aliquam molestias provident, deserunt quas minima facere?. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, tenetur, sint ipsam nobis quibusdam culpa placeat in qui provident consectetur commodi veniam ducimus animi velit deleniti, sed rem autem.</p>
                 </div>
             </div>
 
