--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
                 <a href="https://twitter.com" target="_blank" class="iconos-footer">
                     <i class="fab fa-twitter-square fa-2x mx-2"></i>
                 </a>
+                <a href="https://www.facebook.com" target="_blank" class="iconos-footer">
+                  <i class="fab fa-facebook-square fa-2x mx-2"></i>
+              </a
 
             </div>
         </div>
