--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 aria-labelledby="panelsStayThree-headingThree"
               >
                 <p class="card-text bg-black accordion-body pt-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit neque deserunt ad aspernatur eos blanditiis voluptate sint adipisci assumenda nobis, temporibus cupiditate autem sunt sequi, saepe voluptatum pariatur eveniet?  <dignissimos class="lore"></dignissimos>.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit neque deserunt ad aspernatur eos blanditiis voluptate sint adipisci assumenda nobis, temporibus cupiditate autem sunt sequi, saepe voluptatum pariatur eveniet?. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore rem nobis cumque ullam voluptatibus, facilis labore ipsum obcaecati delectus, sint reprehenderit consequatur et nostrum maiores nisi blanditiis officia necessitatibus in?  <dignissimos class="lore"></dignissimos>.
                 </p>
               </div>
 
